--- a/test.html
+++ b/test.html
@@ -116,30 +116,48 @@
       transform: scale(1.1);
     }
 
-    /* Navbar Styles */
-    .navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
-      padding: 15px 5%;
-      color: white;
-      border-radius: 0 0 10px 10px;
-      position: fixed;
-      top: 60px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100%; /* Full width */
-      max-width: 1000px; /* Set max width for centering */
-      z-index: 1100;
-      transition: transform 0.3s ease-in-out;
-    }
+ .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center all content in the navbar */
+  background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(10px);
+  padding: 15px 5%;
+  color: white;
+  border-radius: 0 0 10px 10px;
+  position: fixed;
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%; /* Full width */
+  max-width: 1000px; /* Set max width for centering */
+  z-index: 1100;
+  transition: transform 0.3s ease-in-out;
+  box-sizing: border-box; /* Ensures padding does not mess with the width */
+}
 
-    .navbar-left {
-      display: flex;
-      gap: 15px;
-    }
+.navbar-left {
+  display: flex;
+  gap: 15px;
+  position: absolute;
+  left: 15px; /* Left-align the left buttons */
+}
+
+.navbar-right {
+  display: flex;
+  gap: 15px;
+  position: absolute;
+  right: 15px; /* Right-align the right buttons */
+}
+
+.search-bar-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 600px; /* Set a max width for the search bar */
+  margin: 0 auto; /* Center the search bar */
+}
+
 
     .nav-btn {
       text-decoration: none;
