--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,149 @@
     <link rel="stylesheet" href="../storage/css/static.css">
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script>
+        const { TweenMax, _ } = window;
+
+        const randomInRange = (max, min) =>
+            Math.floor(Math.random() * (max - min + 1)) + min;
+
+        const ACTIVE_PROBABILITY = 0;
+        const BASE_SIZE = 1;
+        const VELOCITY_INC = 1.01;
+        const VELOCITY_INIT_INC = 1.025;
+        const JUMP_VELOCITY_INC = 1.25;
+        const JUMP_SIZE_INC = 1.15;
+        const SIZE_INC = 1.01;
+        const RAD = Math.PI / 180;
+        const WARP_COLORS = [
+            [197, 239, 247],
+            [25, 181, 254],
+            [77, 5, 232],
+            [165, 55, 253],
+            [255, 255, 255],
+        ];
+
+        class Star {
+            STATE = {
+                alpha: Math.random(),
+                angle: randomInRange(0, 360) * RAD,
+            };
+            reset = () => {
+                const angle = randomInRange(0, 360) * (Math.PI / 180);
+                const vX = Math.cos(angle);
+                const vY = Math.sin(angle);
+                const travelled =
+                    Math.random() > 0.5
+                        ? Math.random() * Math.max(window.innerWidth, window.innerHeight) + (Math.random() * (window.innerWidth * 0.24))
+                        : Math.random() * (window.innerWidth * 0.25);
+                this.STATE = {
+                    ...this.STATE,
+                    iX: undefined,
+                    iY: undefined,
+                    active: travelled ? true : false,
+                    x: Math.floor(vX * travelled) + window.innerWidth / 2,
+                    vX,
+                    y: Math.floor(vY * travelled) + window.innerHeight / 2,
+                    vY,
+                    size: BASE_SIZE,
+                };
+            };
+            constructor() {
+                this.reset();
+            }
+        }
+
+        const generateStarPool = size => new Array(size).fill().map(() => new Star());
+
+        class JumpToHyperspace {
+            STATE = {
+                stars: generateStarPool(300),
+                bgAlpha: 0,
+                sizeInc: SIZE_INC,
+                velocity: VELOCITY_INC,
+                startTime: Date.now(),
+            };
+            canvas = document.getElementById('hyperspaceCanvas');
+            context = this.canvas.getContext('2d');
+            constructor() {
+                this.bind();
+                this.setup();
+                this.render();
+            }
+            render = () => {
+                const { STATE: { bgAlpha, velocity, sizeInc, stars }, context } = this;
+                context.clearRect(0, 0, window.innerWidth, window.innerHeight);
+                if (bgAlpha > 0) {
+                    context.fillStyle = `rgba(31, 58, 157, ${bgAlpha})`;
+                    context.fillRect(0, 0, window.innerWidth, window.innerHeight);
+                }
+                const nonActive = stars.filter(s => !s.STATE.active);
+                if (nonActive.length > 0) {
+                    nonActive[0].STATE.active = true;
+                }
+                for (const star of stars.filter(s => s.STATE.active)) {
+                    const { active, x, y, iX, iY, size, vX, vY } = star.STATE;
+                    if (
+                        ((iX || x) < 0 ||
+                            (iX || x) > window.innerWidth ||
+                            (iY || y) < 0 ||
+                            (iY || y) > window.innerHeight) &&
+                        active
+                    ) {
+                        star.reset(true);
+                    } else if (active) {
+                        const newX = x + vX;
+                        const newY = y + vY;
+                        star.STATE = {
+                            ...star.STATE,
+                            x: newX,
+                            vX: star.STATE.vX * velocity,
+                            y: newY,
+                            vY: star.STATE.vY * velocity,
+                            size: size * sizeInc,
+                        };
+                        let color = `rgba(255, 255, 255, ${star.STATE.alpha})`;
+                        context.strokeStyle = color;
+                        context.lineWidth = size;
+                        context.beginPath();
+                        context.moveTo(star.STATE.iX || x, star.STATE.iY || y);
+                        context.lineTo(star.STATE.x, star.STATE.y);
+                        context.stroke();
+                    }
+                }
+                requestAnimationFrame(this.render);
+            };
+
+            setup() {
+                this.context.lineCap = 'round';
+                this.canvas.height = window.innerHeight;
+                this.canvas.width = window.innerWidth;
+            }
+
+            bind() {
+                this.canvas.addEventListener('mousedown', this.initiate);
+                this.canvas.addEventListener('touchstart', this.initiate);
+            }
+
+            initiate() {
+                this.STATE.bgAlpha = 0.5;
+            }
+        }
+
+        window.myJump = new JumpToHyperspace();
+    </script>
+    <style>
+        canvas {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+        
+}</style>
         <style>
         /* Global Reset */
         * {
@@ -103,9 +246,9 @@
         }
     </style>
 
-<script src="/storage/js/particles.js"></script>
+  <canvas id="hyperspaceCanvas"></canvas>
   <script src="/storage/js/app.js"></script>
-<div id="particles-js"></div>
+
 
     <h1>Proxy</h1>
     <p id="dynamicParagraph">(TEXT)</p>
