--- a/index.html
+++ b/index.html
@@ -40,61 +40,11 @@
     </script>
   </head>
   <body>
-    <div class="navbar">
-      <div class="navbarAlign">
-        <a href="/">
-          <div style="min-width: 85px; max-width: 100px" class="navbarLink">
-            <img style="animation: none" src="assets/imgs/home.png" />
-            <p>Home</p>
-          </div>
-        </a>
 
-        <a href="/g">
-          <div
-            style="min-width: 110px; max-width: 140px"
-            class="navbarLink"
-            class="navbarLink"
-          >
-            <img style="animation: none" src="assets/imgs/game.png" />
-            <p>Games</p>
-          </div>
-        </a>
-
-        <a href="/a">
-          <div style="min-width: 80px; max-width: 200px" class="navbarLink">
-            <img style="animation: none" src="assets/imgs/apps.png" />
-            <p>Apps</p>
-          </div>
-        </a>
-
-        <a href="/s">
-          <div style="min-width: 105px; max-width: 200px" class="navbarLink">
-            <img class="settingnav" src="assets/imgs/settings.png" />
-            <p>Settings</p>
-          </div>
-        </a>
-      </div>
     </div>
     <center>
-      <h3
-        style="
-          margin-bottom: 30px;
-          text-align: left;
-          margin-left: 1%;
-          margin-top: 10px;
-        "
-      >
-        Light
-        <span
-          style="
-            font-size: 45%;
-            vertical-align: top;
-            font-weight: bolder;
-            color: var(--theme-color);
-          "
-          >V3.0.0</span
-        >
-      </h3>
+     
+        
       <div class="card" style="position: fixed">
         <div class="bg">
           <h2
@@ -1313,7 +1263,7 @@ body {
   top: 50%;
   font-family: Poppins;
   color: #4c4c4c;
-  background-image: url("/assets/imgs/bg/bglight.jpg");
+  background-image: url("bgDark.png");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
