--- a/static/test.html
+++ b/static/test.html
@@ -259,57 +259,65 @@
             <input id="uv-address" type="text" class="search-bar-home" placeholder="Search or enter a URL" />
             <button id="search-button" onclick="submitSearch()">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
+<script>
+  // Updated openPage function to append the URL to /static/embed#
+  function openPage(url) {
+      const embeddedUrl = `/static/embed#${url}`;
+      window.open(embeddedUrl, '_blank');
+  }
+</script>
+
 <div class="shortcuts">
-      <button onclick="openPage('https://google.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/google.ico" alt="" class="shortcut-image">
-        <p>Google</p>
-      </button>
-      <button onclick="openPage('https://youtube.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/youtube.png" alt="" class="shortcut-image">
-        <p>YouTube</p>
-      </button>
-      <button onclick="openPage('https://twitter.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/twitter.png" alt="" class="shortcut-image">
-        <p>Twitter</p>
-      </button>
-      <button onclick="openPage('https://gemini.google.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/gemini.png" alt="" class="shortcut-image">
-        <p>Gemini</p>
-      </button>
-      <button onclick="openPage('https://discord.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/discord.ico" alt="" class="shortcut-image">
-        <p>Discord</p>
-      </button>
-      <button onclick="openPage('https://play.geforcenow.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/geforcenow.webp" alt="" class="shortcut-image">
-        <p>GeForce Now</p>
-      </button>
-      <button onclick="openPage('https://crazygames.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/crazygames.avif" alt="" class="shortcut-image">
-        <p>CrazyGames</p>
-      </button>
-      <button onclick="openPage('https://shuttle.lol/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/nowgg.ico" alt="" class="shortcut-image">
-        <p>Now.gg</p>
-      </button>
-      <button onclick="openPage('https://netflix.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/netflix.png" alt="" class="shortcut-image">
-        <p>Netflix</p>
-      </button>
-      <button onclick="openPage('https://character.ai/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/characterai.jpg" alt="" class="shortcut-image">
-        <p>c.ai</p>
-      </button>
-      <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
-        <img src="./assets/images/github.svg" alt="" class="shortcut-image">
-        <p>GitHub</p>
-      </button>
-      <button onclick="handleAddShortcut()" class="shortcut" title="add-shortcut">
-        <i class="fa-solid fa-square-plus" style="font-size: 30px; color: var(--text);"></i>
-        <p>Add Shortcut</p>
-      </button>
-    </div>
-  </div>
+  <button onclick="openPage('https://google.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/google.ico" alt="" class="shortcut-image">
+    <p>Google</p>
+  </button>
+  <button onclick="openPage('https://youtube.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/youtube.png" alt="" class="shortcut-image">
+    <p>YouTube</p>
+  </button>
+  <button onclick="openPage('https://twitter.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/twitter.png" alt="" class="shortcut-image">
+    <p>Twitter</p>
+  </button>
+  <button onclick="openPage('https://gemini.google.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/gemini.png" alt="" class="shortcut-image">
+    <p>Gemini</p>
+  </button>
+  <button onclick="openPage('https://discord.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/discord.ico" alt="" class="shortcut-image">
+    <p>Discord</p>
+  </button>
+  <button onclick="openPage('https://play.geforcenow.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/geforcenow.webp" alt="" class="shortcut-image">
+    <p>GeForce Now</p>
+  </button>
+  <button onclick="openPage('https://crazygames.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/crazygames.avif" alt="" class="shortcut-image">
+    <p>CrazyGames</p>
+  </button>
+  <button onclick="openPage('https://shuttle.lol/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/nowgg.ico" alt="" class="shortcut-image">
+    <p>Now.gg</p>
+  </button>
+  <button onclick="openPage('https://netflix.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/netflix.png" alt="" class="shortcut-image">
+    <p>Netflix</p>
+  </button>
+  <button onclick="openPage('https://character.ai/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/characterai.jpg" alt="" class="shortcut-image">
+    <p>c.ai</p>
+  </button>
+  <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
+    <img src="./assets/images/github.svg" alt="" class="shortcut-image">
+    <p>GitHub</p>
+  </button>
+  <button onclick="handleAddShortcut()" class="shortcut" title="add-shortcut">
+    <i class="fa-solid fa-square-plus" style="font-size: 30px; color: var(--text);"></i>
+    <p>Add Shortcut</p>
+  </button>
+</div>
+
   <style>.shortcuts {
   display: flex;
   flex-wrap: wrap;
