--- a/static/embed.html
+++ b/static/embed.html
@@ -47,6 +47,9 @@
     </style>
 </head>
 <body>
+    <div class="content-wrapper" id="content-wrapper">
+    <iframe class="tab-iframe active" src="/static/index.html" onload="updateTabName(this)"></iframe>
+  </div>
     <div id="loadingScreen">
         <img src="/storage/images/logo.png" alt="Logo">
         <div class="spinner"></div>
