--- a/static/embed.html
+++ b/static/embed.html
@@ -58,5 +58,105 @@
     <script src="uv/uv.config.js"></script>
     <script src="register-sw.js"></script>
     <script src="embed.js"></script>
+    <script> <script>
+let tabCount = 1;
+
+      function selectTab(tab) {
+        document.querySelectorAll('.tab, .tab-iframe').forEach(el => el.classList.remove('active'));
+        tab.classList.add('active');
+        document.querySelectorAll('.tab-iframe')[Array.from(tab.parentNode.children).indexOf(tab)].classList.add('active');
+      }
+
+      function addTab() {
+        tabCount++;
+        const tabsContainer = document.getElementById('tabs');
+        const newTab = document.createElement('div');
+        newTab.classList.add('tab');
+        newTab.innerHTML = `New Tab 
+                                            <span class="close-button" onclick="closeTab(event)">×</span>`;
+        newTab.addEventListener("click", () => selectTab(newTab));
+        tabsContainer.insertBefore(newTab, document.querySelector('.add-tab-button'));
+        const iframe = document.createElement('iframe');
+        iframe.classList.add('tab-iframe');
+        iframe.src = '/static/index.html';
+        iframe.onload = function() {
+          updateTabName(iframe);
+        };
+        document.getElementById('content-wrapper').appendChild(iframe);
+      }
+
+      function closeTab(event) {
+        event.stopPropagation();
+        const tab = event.target.closest('.tab');
+        const iframe = document.querySelectorAll('.tab-iframe')[Array.from(tab.parentNode.children).indexOf(tab)];
+        tab.remove();
+        iframe.remove();
+      }
+
+      function updateTabName(iframe) {
+        setTimeout(() => {
+          const tabIndex = Array.from(document.querySelectorAll('.tab-iframe')).indexOf(iframe);
+          const tab = document.querySelectorAll('.tab')[tabIndex];
+          if (tab) {
+            tab.innerHTML = `${iframe.contentWindow.document.title || 'New Tab'} 
+                                            <span class="close-button" onclick="closeTab(event)">×</span>`;
+          }
+        }, 500);
+      }
+
+      function search() {
+        const input = document.getElementById('search-input').value.trim();
+        const iframe = document.querySelector('.tab-iframe.active');
+        if (input) {
+            const url = input.startsWith('http') ? input : `https://duckduckgo.com/?q=${encodeURIComponent(input)}`;
+            iframe.src = `/static/embed#${url}`;
+        }
+      }
+
+      function home() {
+        const iframe = document.querySelector('.tab-iframe.active');
+        iframe.src = '/static/index';
+      }
+
+      function settings() {
+        const iframe = document.querySelector('.tab-iframe.active');
+        iframe.src = 'settings';
+      }
+
+      function toggleFullscreen() {
+        const iframe = document.querySelector('.tab-iframe.active');
+        if (iframe.requestFullscreen) {
+          iframe.requestFullscreen();
+        } else if (iframe.mozRequestFullScreen) {
+          iframe.mozRequestFullScreen();
+        } else if (iframe.webkitRequestFullscreen) {
+          iframe.webkitRequestFullscreen();
+        } else if (iframe.msRequestFullscreen) {
+          iframe.msRequestFullscreen();
+        }
+      }
+
+      function inspect() {
+        window.location.href = "javascript: (function() { fetch('/storage/js/eruda.js') .then(response => { if (!response.ok) throw new Error('Network response was not ok'); return response.text(); }) .then(scriptText => eval(scriptText)) .catch(error => console.error('Error fetching or executing the script:', error)); })();"
+      }
+
+      function toggleNavbar() {
+        const navbar = document.getElementById('navbar');
+        const tabs = document.getElementById('tabs');
+        const showNavbarBtn = document.getElementById('show-navbar-btn');
+        const hideNavbarBtn = document.getElementById('hide-navbar-btn');
+        navbar.classList.toggle('hidden');
+        tabs.classList.toggle('hidden');
+        showNavbarBtn.classList.toggle('active');
+        hideNavbarBtn.classList.toggle('active');
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        document.querySelector(".add-tab-button").addEventListener("click", addTab);
+        document.getElementById("search-input").addEventListener("keydown", (e) => {
+          if (e.key === "Enter") search();
+        });
+      });
+  </script></script>
 </body>
 </html>
