--- a/static/embed.html
+++ b/static/embed.html
@@ -58,7 +58,7 @@
     <script src="uv/uv.config.js"></script>
     <script src="register-sw.js"></script>
     <script src="embed.js"></script>
-    <script> <script>
+    <script>
 let tabCount = 1;
 
       function selectTab(tab) {
@@ -157,6 +157,6 @@ let tabCount = 1;
           if (e.key === "Enter") search();
         });
       });
-  </script></script>
+  </script>
 </body>
 </html>
