--- a/static/index.html
+++ b/static/index.html
@@ -514,5 +514,14 @@ addressInput.addEventListener('keyup', () => {
   }
 });
 </script>
+    <div id="iframe-container">
+        <iframe id="embed-iframe" src="about:blank"></iframe> <!-- Initially set to about:blank -->
+    </div>
+<script>
+    iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }</script>
 </body>
 </html>
