--- a/static/index.html
+++ b/static/index.html
@@ -318,6 +318,9 @@
     <p>Add Shortcut</p>
   </button>
 </div>
+        <div id="iframe-container">
+        <iframe id="embed-iframe" src="about:blank"></iframe> <!-- Initially set to about:blank -->
+    </div>
 
   <style>.shortcuts {
   display: flex;
