--- a/static/index.html
+++ b/static/index.html
@@ -135,6 +135,7 @@ function closeIframe() {
     iframe.src = '';  // Optionally reset the iframe's source
 }
 </script>
+        <iframe id="embed-iframe" style="display:none;" width="100%" height="100%" frameborder="0"></iframe>
 <br>
         <br>
         <br>
