--- a/static/index.html
+++ b/static/index.html
@@ -156,9 +156,9 @@
             <img src="./assets/images/netflix.png" alt="" class="shortcut-image">
             <p>Netflix</p>
         </button>
-        <button onclick="openPage('https://character.ai/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('/static/embed.html#https://mathsspot.com')" class="shortcut" title="shortcut">
             <img src="./assets/images/characterai.jpg" alt="" class="shortcut-image">
-            <p>c.ai</p>
+            <p>Roblox</p>
         </button>
         <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
             <img src="./assets/images/github.svg" alt="" class="shortcut-image">
