--- a/static/index.html
+++ b/static/index.html
@@ -157,7 +157,7 @@
             <p>Netflix</p>
         </button>
         <button onclick="openPage('/static/embed.html#https://mathsspot.com')" class="shortcut" title="shortcut">
-            <img src="./assets/images/characterai.jpg" alt="" class="shortcut-image">
+            <img src="appimage/JPEG image.jpeg" alt="" class="shortcut-image">
             <p>Roblox</p>
         </button>
         <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
