--- a/static/index.html
+++ b/static/index.html
@@ -196,7 +196,8 @@ function openPage(url) {
   gap: 15px;
   transition: 250ms;
   cursor: pointer;
-  width: 90px
+  width: 150px;
+  height: 150px;
 }
 
 .shortcut:hover {
