--- a/static/index.html
+++ b/static/index.html
@@ -185,7 +185,7 @@ function openPage(url) {
 }
 
 .shortcut {
-  padding: 15px 20px;
+  padding: 20px 30px; /* Increase padding for more space inside */
   border-radius: 10px;
   border: none;
   background: transparent;
@@ -193,12 +193,13 @@ function openPage(url) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 20px; /* Increase gap to allow more space between internal elements */
   transition: 250ms;
   cursor: pointer;
-  width: 150px;
-  height: 150px;
+  width: 200px; /* Increase width */
+  height: 200px; /* Increase height */
 }
+
 
 .shortcut:hover {
   background: var(--background2);
