--- a/static/index.html
+++ b/static/index.html
@@ -185,7 +185,7 @@ function openPage(url) {
 }
 
 .shortcut {
-  padding: 20px 30px; /* Increase padding for more space inside */
+  padding: 15px 20px;
   border-radius: 10px;
   border: none;
   background: transparent;
@@ -193,11 +193,11 @@ function openPage(url) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px; /* Increase gap to allow more space between internal elements */
+  gap: 15px;
   transition: 250ms;
   cursor: pointer;
-  width: 200px; /* Increase width */
-  height: 200px; /* Increase height */
+  width: 90px;
+  height: 90px;
 }
 
 
@@ -215,8 +215,8 @@ function openPage(url) {
 }
 
 .shortcut-image {
-  width: 30px;
-  height: 30px;
+  width: 100px;
+  height: 100px;
   border-radius: 5px;
 }</style>
         <div class="desc left-margin">
