--- a/static/index.html
+++ b/static/index.html
@@ -196,10 +196,8 @@ function openPage(url) {
   gap: 15px;
   transition: 250ms;
   cursor: pointer;
-  width: 90px;
-  height: 90px;
+  width: 90px
 }
-
 
 .shortcut:hover {
   background: var(--background2);
@@ -215,8 +213,8 @@ function openPage(url) {
 }
 
 .shortcut-image {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   border-radius: 5px;
 }</style>
         <div class="desc left-margin">
