--- a/static/index.html
+++ b/static/index.html
@@ -160,9 +160,9 @@
             <img src="/appimage/roblox.jpeg" alt="" class="shortcut-image">
             <p>Roblox</p>
         </button>
-        <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
-            <img src="./assets/images/github.svg" alt="" class="shortcut-image">
-            <p>GitHub</p>
+        <button onclick="openPage('/static/embed.html#https://play.geforcenow.com/')" class="shortcut" title="shortcut">
+            <img src="/appimage/geforce.jpeg" alt="" class="shortcut-image">
+            <p>Geforce</p>
         </button>
     </div>
   
