--- a/static/index.html
+++ b/static/index.html
@@ -120,7 +120,7 @@
 
     <br><br><br>
     <div class="shortcuts">
-        <button onclick="openPage('https://google.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://Tribals.io/')" class="shortcut" title="shortcut">
             <img src="./assets/images/google.ico" alt="" class="shortcut-image">
             <p>Google</p>
         </button>
@@ -132,7 +132,7 @@
             <img src="./assets/images/twitter.png" alt="" class="shortcut-image">
             <p>Twitter</p>
         </button>
-        <button onclick="openPage('https://gemini.google.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://Deadshot.io/')" class="shortcut" title="shortcut">
             <img src="./assets/images/gemini.png" alt="" class="shortcut-image">
             <p>Gemini</p>
         </button>
@@ -140,19 +140,19 @@
             <img src="./assets/images/discord.ico" alt="" class="shortcut-image">
             <p>Discord</p>
         </button>
-        <button onclick="openPage('https://play.geforcenow.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://tiktok.com/')" class="shortcut" title="shortcut">
             <img src="./assets/images/geforcenow.webp" alt="" class="shortcut-image">
             <p>GeForce Now</p>
         </button>
-        <button onclick="openPage('https://crazygames.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://youtube.com/')" class="shortcut" title="shortcut">
             <img src="./assets/images/crazygames.avif" alt="" class="shortcut-image">
             <p>CrazyGames</p>
         </button>
-        <button onclick="openPage('https://shuttle.lol/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://twitch.com')" class="shortcut" title="shortcut">
             <img src="./assets/images/nowgg.ico" alt="" class="shortcut-image">
             <p>Now.gg</p>
         </button>
-        <button onclick="openPage('https://netflix.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
             <img src="./assets/images/netflix.png" alt="" class="shortcut-image">
             <p>Netflix</p>
         </button>
@@ -162,7 +162,7 @@
         </button>
         <button onclick="openPage('/static/embed.html#https://play.geforcenow.com/')" class="shortcut" title="shortcut">
             <img src="/appimage/geforce.jpeg" alt="" class="shortcut-image">
-            <p>Geforce</p>
+            <p>Geforce Now</p>
         </button>
     </div>
   
