--- a/static/index.html
+++ b/static/index.html
@@ -152,9 +152,9 @@
             <img src="./assets/images/nowgg.ico" alt="" class="shortcut-image">
             <p>Now.gg</p>
         </button>
-        <button onclick="openPage('https://github.com/')" class="shortcut" title="shortcut">
+        <button onclick="openPage('/static/embed.html#https://play.geforcenow.com/mall/#/deeplink?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a')" class="shortcut" title="shortcut">
             <img src="./assets/images/netflix.png" alt="" class="shortcut-image">
-            <p>Netflix</p>
+            <p>Fortnite</p>
         </button>
         <button onclick="openPage('/static/embed.html#https://mathsspot.com')" class="shortcut" title="shortcut">
             <img src="/appimage/roblox.jpeg" alt="" class="shortcut-image">
