--- a/static/index.html
+++ b/static/index.html
@@ -161,7 +161,7 @@
             <p>Roblox</p>
         </button>
         <button onclick="openPage('/static/embed.html#https://play.geforcenow.com/')" class="shortcut" title="shortcut">
-            <img src="/appimage/geforce.jpeg" alt="" class="shortcut-image">
+            <img src="/appimage/JPEG image.jpeg" alt="" class="shortcut-image">
             <p>Geforce Now</p>
         </button>
     </div>
