--- a/index.html
+++ b/index.html
@@ -273,6 +273,14 @@
       <button onclick="toggleNavbar()" class="nav-btn" id="hide-navbar-btn">
         <i class="fa fa-chevron-up"></i>
       </button>
+      <button onclick="openPage('/games.html')" class="shortcut" title="Games">
+    <i class="fa-solid fa-gamepad fa-3x"></i>
+    <p>Games</p>
+</button>
+      <button onclick="openPage('/apps.html')" class="shortcut" title="Apps">
+    <i class="fa-solid fa-th-large fa-3x"></i>
+    <p>Apps</p>
+</button>
     </div>
   </div>
 
