--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <i class="fa fa-chevron-up"></i>
       </button>
       <button onclick="openPage('/games.html')" class="shortcut" title="Games">
-    <i class="fa-solid fa-gamepad fa-3x"></i>
+    <i class="fa-thin fa-gamepad"></i>
     <p>Games</p>
 </button>
       <button onclick="openPage('/apps.html')" class="shortcut" title="Apps">
