--- a/index.html
+++ b/index.html
@@ -273,13 +273,11 @@
       <button onclick="toggleNavbar()" class="nav-btn" id="hide-navbar-btn">
         <i class="fa fa-chevron-up"></i>
       </button>
-      <button onclick="openPage('/games.html')" class="shortcut" title="Games">
-    <i class="fa-thin fa-gamepad"></i>
-    <p>Games</p>
+      <button onclick="openPage('/games.html')" class="nav-btn">
+  <i class="fas fa-gamepad"></i> Games
 </button>
-      <button onclick="openPage('/apps.html')" class="shortcut" title="Apps">
-    <i class="fa-solid fa-th-large fa-3x"></i>
-    <p>Apps</p>
+<button onclick="openPage('/apps.html')" class="nav-btn">
+  <i class="fas fa-th-large"></i> Apps
 </button>
     </div>
   </div>
