--- a/apps.html
+++ b/apps.html
@@ -46,6 +46,7 @@
     </style>
 </head>
 <body>
+ <input type="text" id="search" class="search-bar" placeholder="Search apps..." onkeyup="filterCards()">
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://9anime.to')">
         <img src="/appimage/9anime.png" alt="9Anime">
