--- a/apps.html
+++ b/apps.html
@@ -6,6 +6,23 @@
     <title>Game Cards</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        .search-bar {
+            width: 100%;
+            max-width: 400px;
+            padding: 10px 20px;
+            margin-bottom: 20px;
+            border-radius: 30px;
+            border: none;
+            font-size: 16px;
+            background-color: #333;
+            color: #fff;
+            outline: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transition: background-color 0.3s ease;
+        }
+        .search-bar:focus {
+            background-color: #444;
+        }
         * {
             margin: 0;
             padding: 0;
