--- a/apps.html
+++ b/apps.html
@@ -66,199 +66,200 @@
  <input type="text" id="search" class="search-bar" placeholder="Search apps..." onkeyup="filterCards()">
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://9anime.to')">
-        <img src="/appimage/9anime.png" alt="9Anime">
+        <img src="/appimage/apps/9anime.png" alt="9Anime">
         <p>9Anime</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://amazon.com')">
-        <img src="/appimage/amazon.png" alt="Amazon">
+        <img src="/appimage/apps/amazon.png" alt="Amazon">
         <p>Amazon</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://buzzfeed.com')">
-        <img src="/appimage/buzzfeed.png" alt="Buzzfeed">
+        <img src="/appimage/apps/buzzfeed.png" alt="Buzzfeed">
         <p>Buzzfeed</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://coolmathgames.com')">
-        <img src="/appimage/coolmath.png" alt="Coolmath Games">
+        <img src="/appimage/apps/coolmath.png" alt="Coolmath Games">
         <p>Coolmath</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://discord.com')">
-        <img src="/appimage/discord.jpg" alt="Discord">
+        <img src="/appimage/apps/discord.jpg" alt="Discord">
         <p>Discord</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://disneyplus.com')">
-        <img src="/appimage/disney-plus.png" alt="Disney Plus">
+        <img src="/appimage/apps/disney-plus.png" alt="Disney Plus">
         <p>Disney Plus</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://duckduckgo.com')">
-        <img src="/appimage/duckduckgo.png" alt="DuckDuckGo">
+        <img src="/appimage/apps/duckduckgo.png" alt="DuckDuckGo">
         <p>DuckDuckGo</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://espn.com')">
-        <img src="/appimage/espn.webp" alt="ESPN">
+        <img src="/appimage/apps/espn.webp" alt="ESPN">
         <p>ESPN</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://facebook.com')">
-        <img src="/appimage/facebook.png" alt="Facebook">
+        <img src="/appimage/apps/facebook.png" alt="Facebook">
         <p>Facebook</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://firefox.com')">
-        <img src="/appimage/firefox.png" alt="Firefox">
+        <img src="/appimage/apps/firefox.png" alt="Firefox">
         <p>Firefox</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://flixhq.tv')">
-        <img src="/appimage/flixhq.png" alt="FlixHQ">
+        <img src="/appimage/apps/flixhq.png" alt="FlixHQ">
         <p>FlixHQ</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://geforce-now.com')">
-        <img src="/appimage/geforce-now.png" alt="GeForce Now">
+        <img src="/appimage/apps/geforce-now.png" alt="GeForce Now">
         <p>GeForce Now</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://github.com')">
-        <img src="/appimage/github.png" alt="GitHub">
+        <img src="/appimage/apps/github.png" alt="GitHub">
         <p>GitHub</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://google.com')">
-        <img src="/appimage/google.png" alt="Google">
+        <img src="/appimage/apps/google.png" alt="Google">
         <p>Google</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://hbo.com')">
-        <img src="/appimage/hbo.webp" alt="HBO">
+        <img src="/appimage/apps/hbo.webp" alt="HBO">
         <p>HBO</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://hulu.com')">
-        <img src="/appimage/hulu.png" alt="Hulu">
+        <img src="/appimage/apps/hulu.png" alt="Hulu">
         <p>Hulu</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://instagram.com')">
-        <img src="/appimage/instagram.png" alt="Instagram">
+        <img src="/appimage/apps/instagram.png" alt="Instagram">
         <p>Instagram</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://messenger.com')">
-        <img src="/appimage/messenger.png" alt="Messenger">
+        <img src="/appimage/apps/messenger.png" alt="Messenger">
         <p>Messenger</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://nowgg.com')">
-        <img src="/appimage/nowgg.png" alt="NowGG">
+        <img src="/appimage/apps/nowgg.png" alt="NowGG">
         <p>NowGG</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://paramount.com')">
-        <img src="/appimage/paramount.png" alt="Paramount">
+        <img src="/appimage/apps/paramount.png" alt="Paramount">
         <p>Paramount</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://pinterest.com')">
-        <img src="/appimage/pinterest.png" alt="Pinterest">
+        <img src="/appimage/apps/pinterest.png" alt="Pinterest">
         <p>Pinterest</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://poki.com')">
-        <img src="/appimage/poki.png" alt="Poki">
+        <img src="/appimage/apps/poki.png" alt="Poki">
         <p>Poki</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://reddit.com')">
-        <img src="/appimage/reddit.png" alt="Reddit">
+        <img src="/appimage/apps/reddit.png" alt="Reddit">
         <p>Reddit</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://snapchat.com')">
-        <img src="/appimage/snapchat.png" alt="Snapchat">
+        <img src="/appimage/apps/snapchat.png" alt="Snapchat">
         <p>Snapchat</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://soundcloud.com')">
-        <img src="/appimage/soundcloud.jpg" alt="Soundcloud">
+        <img src="/appimage/apps/soundcloud.jpg" alt="Soundcloud">
         <p>SoundCloud</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://spotify.com')">
-        <img src="/appimage/spotify.png" alt="Spotify">
+        <img src="/appimage/apps/spotify.png" alt="Spotify">
         <p>Spotify</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://telegram.com')">
-        <img src="/appimage/telegram.png" alt="Telegram">
+        <img src="/appimage/apps/telegram.png" alt="Telegram">
         <p>Telegram</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://tiktok.com')">
-        <img src="/appimage/tiktok.png" alt="TikTok">
+        <img src="/appimage/apps/tiktok.png" alt="TikTok">
         <p>TikTok</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://tumblr.com')">
-        <img src="/appimage/tumblr.png" alt="Tumblr">
+        <img src="/appimage/apps/tumblr.png" alt="Tumblr">
         <p>Tumblr</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://twitch.tv')">
-        <img src="/appimage/twitch-tv.png" alt="Twitch">
+        <img src="/appimage/apps/twitch-tv.png" alt="Twitch">
         <p>Twitch</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://twitter.com')">
-        <img src="/appimage/twitter.png" alt="Twitter">
+        <img src="/appimage/apps/twitter.png" alt="Twitter">
         <p>Twitter</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://vscode.com')">
-        <img src="/appimage/vscode.png" alt="VSCode">
+        <img src="/appimage/apps/vscode.png" alt="VSCode">
         <p>VSCode</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://wattpad.com')">
-        <img src="/appimage/wattpad.webp" alt="Wattpad">
+        <img src="/appimage/apps/wattpad.webp" alt="Wattpad">
         <p>Wattpad</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://whatsapp.com')">
-        <img src="/appimage/whatsapp.png" alt="WhatsApp">
+        <img src="/appimage/apps/whatsapp.png" alt="WhatsApp">
         <p>WhatsApp</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://widgetbot.io')">
-        <img src="/appimage/widgetbot.png" alt="Widgetbot">
+        <img src="/appimage/apps/widgetbot.png" alt="Widgetbot">
         <p>Widgetbot</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://y8.com')">
-        <img src="/appimage/y8.png" alt="Y8">
+        <img src="/appimage/apps/y8.png" alt="Y8">
         <p>Y8</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://youtube.com')">
-        <img src="/appimage/yt.png" alt="YouTube">
+        <img src="/appimage/apps/yt.png" alt="YouTube">
         <p>YouTube</p>
     </div>
 
     <div class="game-card" onclick="openPage('/static/embed.html#https://zoroto.com')">
-        <img src="/appimage/zoroto.webp" alt="Zoroto">
+        <img src="/appimage/apps/zoroto.webp" alt="Zoroto">
         <p>Zoroto</p>
     </div>
 
     <script>
         function openPage(url) {
-    window.location.href = url; // Open the link in the current tab
-}
+            window.location.href = url; // Open the link in the current tab
+        }
+
         function filterCards() {
             const searchTerm = document.getElementById('search').value.toLowerCase();
             const cards = document.querySelectorAll('.game-card');
