--- a/apps.html
+++ b/apps.html
@@ -273,5 +273,39 @@
             });
         }
     </script>
+    <script src="/static/uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/register-sw.js" defer></script>
+    <script src="/static/search.js" defer></script>
+    <script src="/static/index.js" defer></script>
+
+    <script>
+        const phrases = [
+            "us5 when",
+            "credits to brunys for the proxy stuff",
+            "idk",
+            "there is a nuclear bomb heading for your location. please seek shelter immediately",
+        ];
+
+        const paragraph = document.getElementById('dynamicParagraph');
+
+        function changeText() {
+            const randomPhrase = phrases[Math.floor(Math.random() * phrases.length)];
+            paragraph.textContent = randomPhrase;
+        }
+
+        paragraph.addEventListener('click', changeText);
+        window.onload = changeText;
+    </script>
+    <script type="text/javascript" src="/storage/js/background.js"></script>
+    <script>
+    async function regsw(){
+        await navigator.serviceWorker.register("/static/uv-sw.js", {
+            scope: "/static/",
+        });
+    }
+
+    regsw();
+    </script>
 </body>
 </html>
