--- a/apps.html
+++ b/apps.html
@@ -63,8 +63,8 @@
     </style>
 </head>
 <body>
- <input type="text" id="search" class="search-bar" placeholder="Search apps..." onkeyup="filterCards()">
-
+ <center><input type="text" id="search" class="search-bar" placeholder="Search apps..." onkeyup="filterCards()"></center>
+<br><br><br>
     <div class="game-card" onclick="openPage('/static/embed.html#https://9anime.to')">
         <img src="/appimage/apps/9anime.png" alt="9Anime">
         <p>9Anime</p>
